--- a/index/index.html
+++ b/index/index.html
@@ -8,6 +8,10 @@
 
 <body>
     <script>
+
+          document.write('Check the console!');
+
+
         var word = "bottles";
         var count = 99;
         while (count > 0) {
