--- a/Array/Bubbles/bubbles.html
+++ b/Array/Bubbles/bubbles.html
@@ -16,11 +16,20 @@
             46, 31, 57, 52, 44, 18,
             41, 53, 55, 61, 51, 44];
         var output;
+
+        var highScore = 0;
+
         for (var i = 0; i < scores.length; i++) {
             output = "Bubble solution #" + i +
                 " score: " + scores[i];
             console.log(output);
+            if(scores[i] > highScore){
+              highScore = scores[i];
+            }
         }
+
+        console.log("Bubbles test : " + scores.length);
+        console.log("Highest Bubble score :" + highScore);
 
         document.write("Check Console!");
     </script>
