--- a/DOM/Dom final/dom.html
+++ b/DOM/Dom final/dom.html
@@ -30,3 +30,7 @@
 </body>
 
 </html>
+
+
+
+<!-- The init function added here is an "eventhandler" or a "callback" function that is called once the page is loaded! -->
