--- a/Battleship/Initial/battleship1.html
+++ b/Battleship/Initial/battleship1.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Play battleship!</h1>
-    <script src="battleship.js"></script>
+    <script src="battleship1.js"></script>
 </body>
 
 </html>
