--- a/Battleship/Game/battleship.html
+++ b/Battleship/Game/battleship.html
@@ -49,6 +49,14 @@
             border-color: rgb(83, 175, 19);
             font-size: 1em;
         }
+
+        .hit {
+            background: url("ship.png") no-repeat center center;
+        }
+
+        .miss {
+            background: url("miss.png") no-repeat center center;
+        }
     </style>
 </head>
 
@@ -70,7 +78,7 @@
                 <td id="10"></td>
                 <td id="11"></td>
                 <td id="12"></td>
-                <td id="13"></td>
+                <td id="13" class="hit"></td>
                 <td id="14"></td>
                 <td id="15"></td>
                 <td id="16"></td>
