--- a/Battleship/Game/battleship.html
+++ b/Battleship/Game/battleship.html
@@ -68,8 +68,7 @@
                 <td id="00"></td>
                 <td id="01"></td>
                 <td id="02"></td>
-                <td id="03">
-                </td>
+                <td id="03"> </td>
                 <td id="04"></td>
                 <td id="05"></td>
                 <td id="06"></td>
@@ -78,7 +77,7 @@
                 <td id="10"></td>
                 <td id="11"></td>
                 <td id="12"></td>
-                <td id="13" class="hit"></td>
+                <td id="13"></td>
                 <td id="14"></td>
                 <td id="15"></td>
                 <td id="16"></td>
@@ -130,7 +129,9 @@
             <input type="button" id="fireButton" value="Fire!">
         </form>
     </div>
-    <script src="battleship.js"></script>
+    <script src="battleship.js">
+
+    </script>
 </body>
 
 </html>
