--- a/Battleship/Game/game.html
+++ b/Battleship/Game/game.html
@@ -62,13 +62,13 @@
 
         /* Hit and Miss in classes */
 
-        /* .hit {
+        .hit {
             background: url("ship.png") no-repeat center center;
         }
 
         .miss {
             background: url("miss.png") no-repeat center center;
-        } */
+        }
     </style>
 </head>
 
