--- a/Events/Blur Game/zero.html
+++ b/Events/Blur Game/zero.html
@@ -14,15 +14,15 @@
         }
     </style>
     <script>
-        window.onload = init;
-        function init() {
-            var image = document.getElementById("zero");
-            image.onclick = showAnswer;
-        }
-        function showAnswer() {
-            var image = document.getElementById("zero");
-            image.src = "zero.jpg";
-        }
+       window.onload = init();
+       function init() {
+           var images = document.getElementsByTagName("img");
+           for (var i = 0 ; i < images.length ; i++){
+               images[i].onclick = showAnswer();
+           }
+       };
+
+
     </script>
 </head>
 
