--- a/Events/Timers/timeinterval/interval.html
+++ b/Events/Timers/timeinterval/interval.html
@@ -4,6 +4,11 @@
 <head>
     <title>Interval</title>
     <meta charset="utf-8">
+    <style>
+        body{
+            background-color: yellow;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,6 +25,7 @@
             }
         }
         setInterval(ticker, 1000);
+
 
     </script>
 </body>
