--- a/eg.html
+++ b/eg.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <script>
 
 
 
 
 
 
+// case 1
+    const add = (value) => {
 
-      const add = (value) => {
+      function sum(name) {
+        return value + "  " + name;
+      }
+      return sum;
 
-                                        function sum (name) {
-                                           return value + "  " + name;
-                                        }
-        return sum;
-       
-      };
+    };
 
-      let a = add("student");
-      console.log(a("haii"));
-   
-    
+    let a = add("student");
+    console.log(a("haii"));
+
+// case 2
+
+    const getAdd = (num1) => {
+
+      function addIt(num2) {
+        return num1 + num2;
+      }
+      return addIt;
+
+    };
+
+    let f = getAdd("melo");
+    console.log(f("dious"));
+
+
+
+
 
 
 
@@ -42,6 +60,7 @@
 
 
 
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
