--- a/eg.html
+++ b/eg.html
@@ -80,18 +80,16 @@
 
 // case 3 c
 
-function makeFunc() {
-  var newName = 'Mozilla';
-  function name(){
-    return "hello"
-  };
-  return name;
-}
-const myF = makeFunc();
+// function makeFunc() {
+//   var newName = 'Mozilla';
+//   function name(){
+//     return "hello"
+//   };
+//   return name;
+// }
+// const myF = makeFunc();
 //  console.log(makeFunc());
-console.log(myF())
-
-
+// console.log(myF())
 
 
 
