--- a/Behaviour/behaviour.html
+++ b/Behaviour/behaviour.html
@@ -9,6 +9,13 @@
         function wakeUpUser() {
             alert("Are you going to stare at this boring page forever?");
         }
+
+
+        setTimeout(mineUser,5000);
+        function mineUser(){
+            alert("GET LOST USER!");
+        }
+        
     </script>
 </head>
 
